--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "main": "lib/nt.js",
   "scripts": {
-    "test": "node ./tests/test.js",
-    "benchmark": "node ./tests/benchmark.js"
+    "test": "jest",
+    "benchmark": "ts-node ./tests/benchmark.js"
   },
   "files": [
     "lib/",
@@ -33,5 +33,33 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/keithwhor/NtSeq"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.0",
+    "jest": "^23.4.1",
+    "ts-jest": "^23.0.1",
+    "ts-node": "^7.0.0",
+    "typescript": "^2.9.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/__tests__/*.+(ts|tsx|js)"
+    ]
+  },
+  "dependencies": {
+    "@types/node": "^10.5.2"
   }
 }
