--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
+    "declaration": true,
     "downlevelIteration": true,
     "lib": ["dom", "es2015", "es2016", "es2017"],
     "module": "commonjs",
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
-    "outDir": "./dist/",
+    "outDir": "./lib/",
     "paths": {
       "jest": ["node_modules/@types/jest/index.d.ts"],
     },
@@ -17,7 +18,7 @@
     "strict": true,
     "target": "es5"
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "src/**/__tests__/*"],
   "include": ["src/**/*"],
   "typeAcquisition": {
     "enable": false
