--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.0",
+    "husky": "^0.14.3",
     "jest": "^23.4.1",
     "lint-staged": "^7.2.0",
     "markdownlint-cli": "^0.11.0",
