--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
   "devDependencies": {
     "@types/jest": "^23.3.0",
     "husky": "^0.14.3",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "^23.4.1",
+    "jest-fetch-mock": "^1.6.5",
     "lint-staged": "^7.2.0",
     "markdownlint-cli": "^0.11.0",
     "prettier": "^1.13.7",
@@ -79,6 +81,10 @@
     "typescript": "^2.9.2"
   },
   "jest": {
+    "automock": false,
+    "setupFiles": [
+      "./setupJest.ts"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
